# metronome

./: .gitignore  LICENSE  README.md  euclidean_rhythm.py  euclidean_rhythm.sh  fretboard_note_quiz.sh  fretboard_quiz.sh  main.py  metronome.sh  my_pattern.sh  notes.md  play.sh  pyproject.toml  rhythm_pattern.sh  run.sh  test_euclidean_rhythm.sh
docs/: multi_track_wave_sound.md  sound_tools.md
snippets/: fingerboard.sh  generate_chord_progression.py  get_code_tone.py  metronome_stats.sh  metronome_swing.sh  multi-track_wave_sound.py  play_midi.py  play_wave_sound.py  sine_wave_chord.py  sine_wave_melody.py  ui_metronome.sh  vim_edit_melody.md  vim_piano_roll.md
test/: test_euclidean_rhythm.sh
